$Id: ChangeLog,v 1.458 2008/07/26 14:09:29 haraldkipp Exp $

2008-07-26  Harald Kipp  <harald.kipp@egnite.de>

	* pro/cgi.c, pro/ssi.c: Thanks to Ole for quickly fixing bugs
	#2026946 and #2026951. Unfortunately the bug report missed to
	mention, that strtok_r() isn't available as well. Finally I
	tried to fix this without breaking Ole's code. Sorry, if I did.

	* configure.ac, os/version.c: Preparing 4.5.7 beta.

	* arch/arm/dev/ih_at91adc.c, arch/arm/dev/ih_at91emac.c,
	arch/arm/dev/ih_at91fiq.c, arch/arm/dev/ih_at91pio.c,
	arch/arm/dev/ih_at91pioa.c, arch/arm/dev/ih_at91piob.c,
	arch/arm/dev/ih_at91pioc.c, arm/dev/ih_at91spi0.c,
	arm/dev/ih_at91spi1.c, arch/arm/dev/ih_at91ssc.c,
	arch/arm/dev/ih_at91tc0.c, arch/arm/dev/ih_at91tc1.c,
	arch/arm/dev/ih_at91tc2.c, arch/arm/dev/ih_at91twi.c,
	arch/arm/dev/ih_at91uart0.c, arch/arm/dev/ih_at91uart1.c:
	Added capability to set and retrieve the interrupt mode. 
	The default mode for the UART had been switched from
	edge triggered to level sensitive, as specified in the
	AT91 datasheet. Many thanks to Tim DeBaillie for reporting 
	these problems. And special thanks to Alain M. for tracking
	them.

	* dev/ihndlr.c, include/dev/irqreg.h: Allow to just query the 
	current interrupt mode by calling NutIrqSetMode(&sig_, 
	NUT_IRQMODE_NONE). Another new level specifier is
	NUT_IRQMODE_LEVEL, which is used to specify level sensitive
	interrupts for internal devices of the AT91 CPUs.


2008-07-25  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* app/httpd/httpserv.c: Fixed compiler bug for Imagecraft compilers
	  and added missing PSTR macro around prog_char strings

	* pro/cgi.c, pro/ssi.c: Imagecraft compilers does not support alloca
	  (to allocate memory from the stack). So we use 
          NutHeapAlloc / NutHeapClear instead for Imagecraft.

2008-07-24  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, os/version.c: Preparing 4.5.6 beta.

	* conf/repository.nut: nutinfo brief demonstrates some Configurator
	capabilities.